[gd_scene load_steps=12 format=2]

[ext_resource path="res://View/template.tscn" type="PackedScene" id=1]
[ext_resource path="res://Xolonium_48.tres" type="DynamicFont" id=2]
[ext_resource path="res://Model/Labels/Register.tscn" type="PackedScene" id=3]
[ext_resource path="res://Model/Labels/LoginHeader.tscn" type="PackedScene" id=4]
[ext_resource path="res://Model/Labels/LogIn.tscn" type="PackedScene" id=5]
[ext_resource path="res://Control/randy_scripts/LoginScreen.gd" type="Script" id=6]
[ext_resource path="res://Model/Labels/ForgotPassword.tscn" type="PackedScene" id=7]
[ext_resource path="res://Montserrat_32.tres" type="DynamicFont" id=8]
[ext_resource path="res://Xolonium_32.tres" type="DynamicFont" id=9]

[sub_resource type="CanvasItemMaterial" id=1]

[sub_resource type="GDScript" id=2]
script/source = "extends Button

export(String) var scene_to_load
"

[node name="LoginScreen" instance=ExtResource( 1 )]
margin_right = -3.0
script = ExtResource( 6 )

[node name="MarginContainer" parent="TextureRect" index="0"]
anchor_top = 0.00166151
anchor_bottom = 1.00166
margin_left = 2.0
margin_top = -2.65833
margin_right = 0.0
margin_bottom = -8.65637
rect_scale = Vector2( 0.825, 0.825 )

[node name="ColorRect" parent="TextureRect/MarginContainer" index="0"]
material = SubResource( 1 )
margin_right = 1340.0
margin_bottom = 1124.0

[node name="MarginContainer" parent="TextureRect/MarginContainer" index="1"]
margin_right = 1340.0
margin_bottom = 1124.0

[node name="VBoxContainer" parent="TextureRect/MarginContainer/MarginContainer" index="0"]
margin_right = 990.0
margin_bottom = 924.0
custom_constants/separation = 175
alignment = 2

[node name="ErrorMessage" type="Label" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer" index="0"]
visible = false
margin_right = 940.0
margin_bottom = 69.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0.647059, 0.109804, 0.109804, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Error Message"
align = 1
autowrap = true

[node name="GridContainer" type="GridContainer" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer" index="1"]
margin_top = 244.0
margin_right = 940.0
margin_bottom = 374.0
custom_constants/vseparation = 10
custom_constants/hseparation = 20
columns = 2

[node name="Label" type="Label" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/GridContainer" index="0"]
margin_right = 380.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 2 )
text = "Email Address: "
align = 2

[node name="LineEdit" type="LineEdit" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/GridContainer" index="1"]
margin_left = 400.0
margin_right = 900.0
margin_bottom = 60.0
rect_min_size = Vector2( 500, 0 )
custom_fonts/font = ExtResource( 8 )
text = "kohsweesen99@gmail.com"

[node name="Label2" type="Label" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/GridContainer" index="2"]
margin_top = 70.0
margin_right = 380.0
margin_bottom = 130.0
custom_fonts/font = ExtResource( 2 )
text = "Password: "
align = 2

[node name="LineEdit2" type="LineEdit" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/GridContainer" index="3"]
margin_left = 400.0
margin_top = 70.0
margin_right = 900.0
margin_bottom = 130.0
custom_fonts/font = ExtResource( 8 )
text = "12345678"
secret = true

[node name="MarginContainer" type="MarginContainer" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer" index="2"]
margin_top = 549.0
margin_right = 940.0
margin_bottom = 639.0
custom_constants/margin_right = 250
custom_constants/margin_left = 250

[node name="LoginButton" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/MarginContainer" index="0" instance=ExtResource( 5 )]
margin_left = 250.0
margin_right = 690.0
margin_bottom = 90.0
script = SubResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer" index="3"]
margin_top = 814.0
margin_right = 940.0
margin_bottom = 874.0
custom_constants/separation = 100

[node name="RegButton" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer" index="0" instance=ExtResource( 3 )]
margin_top = 0.0
margin_right = 360.0
margin_bottom = 60.0
script = SubResource( 2 )

[node name="ForgotPassButton" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer" index="1" instance=ExtResource( 7 )]
margin_left = 460.0
margin_top = 0.0
margin_right = 940.0
margin_bottom = 60.0
script = SubResource( 2 )

[node name="HTTPRequest" type="HTTPRequest" parent="." index="3"]

[node name="Header" parent="." index="4" instance=ExtResource( 4 )]
[connection signal="pressed" from="TextureRect/MarginContainer/MarginContainer/VBoxContainer/MarginContainer/LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="pressed" from="TextureRect/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/RegButton" to="." method="_on_RegButton_pressed"]
[connection signal="pressed" from="TextureRect/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/ForgotPassButton" to="." method="_on_ForgotPassButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
